--- a/.classpath
+++ b/.classpath
@@ -27,21 +27,23 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/Users/gchristi/Documents/workspace/Clas12/Coatjava/clas12-offline-software/coatjava/lib/clas/coat-libs-5.1-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="/Users/gchristi/Documents/workspace/Clas12/Coatjava/clas12-offline-software/coatjava/lib/services/clas12detector-cnd-1.0-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="/Users/gchristi/Documents/workspace/Clas12/Coatjava/clas12-offline-software/coatjava/lib/services/clas12detector-dc-1.0-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="/Users/gchristi/Documents/workspace/Clas12/Coatjava/clas12-offline-software/coatjava/lib/services/clas12detector-eb-1.0-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="/Users/gchristi/Documents/workspace/Clas12/Coatjava/clas12-offline-software/coatjava/lib/services/clas12detector-ec-1.0-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="/Users/gchristi/Documents/workspace/Clas12/Coatjava/clas12-offline-software/coatjava/lib/services/clas12detector-ft-1.0-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="/Users/gchristi/Documents/workspace/Clas12/Coatjava/clas12-offline-software/coatjava/lib/services/clas12detector-fvt-1.0-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="/Users/gchristi/Documents/workspace/Clas12/Coatjava/clas12-offline-software/coatjava/lib/services/clas12detector-rich-1.0-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="/Users/gchristi/Documents/workspace/Clas12/Coatjava/clas12-offline-software/coatjava/lib/services/clasrec-htcc-1.0-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="/Users/gchristi/Documents/workspace/Clas12/Coatjava/clas12-offline-software/coatjava/lib/services/clasrec-ltcc-1.0-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="/Users/gchristi/Documents/workspace/Clas12/Coatjava/clas12-offline-software/coatjava/lib/services/cvt-1.0-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="/Users/gchristi/Documents/workspace/Clas12/Coatjava/clas12-offline-software/coatjava/lib/services/tof-1.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="/Users/gchristi/Documents/workspace/Clas12/Decoder/CoatjavaExpertDecoder/coatjava/lib/clas/coat-libs-5.1-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="/Users/gchristi/Documents/workspace/Clas12/Decoder/CoatjavaExpertDecoder/coatjava/lib/clas/JEventViewer-1.1.jar"/>
+	<classpathentry kind="lib" path="/Users/gchristi/Documents/workspace/Clas12/Decoder/CoatjavaExpertDecoder/coatjava/lib/clas/vecmath-1.3.1-2.jar"/>
+	<classpathentry kind="lib" path="/Users/gchristi/Documents/workspace/Clas12/Decoder/CoatjavaExpertDecoder/coatjava/lib/utils/jclara-4.3-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="/Users/gchristi/Documents/workspace/Clas12/Decoder/CoatjavaExpertDecoder/coatjava/lib/utils/KPP-Monitoring-1.0.jar"/>
+	<classpathentry kind="lib" path="/Users/gchristi/Documents/workspace/Clas12/Decoder/CoatjavaExpertDecoder/coatjava/lib/utils/KPP-Plots-1.0.jar"/>
+	<classpathentry kind="lib" path="/Users/gchristi/Documents/workspace/Clas12/Decoder/CoatjavaExpertDecoder/coatjava/lib/services/clas12detector-cnd-1.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="/Users/gchristi/Documents/workspace/Clas12/Decoder/CoatjavaExpertDecoder/coatjava/lib/services/clas12detector-dc-1.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="/Users/gchristi/Documents/workspace/Clas12/Decoder/CoatjavaExpertDecoder/coatjava/lib/services/clas12detector-eb-1.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="/Users/gchristi/Documents/workspace/Clas12/Decoder/CoatjavaExpertDecoder/coatjava/lib/services/clas12detector-ec-1.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="/Users/gchristi/Documents/workspace/Clas12/Decoder/CoatjavaExpertDecoder/coatjava/lib/services/clas12detector-ft-1.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="/Users/gchristi/Documents/workspace/Clas12/Decoder/CoatjavaExpertDecoder/coatjava/lib/services/clas12detector-fvt-1.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="/Users/gchristi/Documents/workspace/Clas12/Decoder/CoatjavaExpertDecoder/coatjava/lib/services/clas12detector-rich-1.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="/Users/gchristi/Documents/workspace/Clas12/Decoder/CoatjavaExpertDecoder/coatjava/lib/services/clasrec-htcc-1.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="/Users/gchristi/Documents/workspace/Clas12/Decoder/CoatjavaExpertDecoder/coatjava/lib/services/clasrec-ltcc-1.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="/Users/gchristi/Documents/workspace/Clas12/Decoder/CoatjavaExpertDecoder/coatjava/lib/services/cvt-1.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="/Users/gchristi/Documents/workspace/Clas12/Decoder/CoatjavaExpertDecoder/coatjava/lib/services/tof-1.0-SNAPSHOT.jar"/>
 	<classpathentry kind="lib" path="/Users/gchristi/Documents/workspace/Clas12/Monitoring/Monitoring-Shifter/src/main/resources/jlog.jar"/>
-	<classpathentry kind="lib" path="/Users/gchristi/Documents/workspace/Clas12/Coatjava/clas12-offline-software/coatjava/lib/utils/jclara-4.3-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="/Users/gchristi/Documents/workspace/Clas12/Coatjava/clas12-offline-software/coatjava/lib/utils/KPP-Monitoring-1.0.jar"/>
-	<classpathentry kind="lib" path="/Users/gchristi/Documents/workspace/Clas12/Coatjava/clas12-offline-software/coatjava/lib/utils/KPP-Plots-1.0.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
